--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,11 @@
         <button id="auth-yes" class="btn btn-primary">Authenticate</button>
       </div>
     </div>
-
+    <div id="map"></div>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
+    <script src="//maps.googleapis.com/maps/api/js?sensor=false"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/app.js"></script>
   </body>
