--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
       </div>
     </div>
     <div id="map"></div>
+    <div id="sidebar"></div>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
