--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
     <script src="//maps.googleapis.com/maps/api/js?sensor=false&libraries=geometry"></script>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="/cluster.js"></script>
     <script src="/app.js"></script>
   </body>
 </html>
