--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
         </p>
       </div>
       <div class="modal-footer">
-        <button id="auth-no" class="btn" data-dismiss="modal" aria-hidden="true">No Thanks</button>
+        <!--<button id="auth-no" class="btn" data-dismiss="modal" aria-hidden="true">No Thanks</button> -->
         <button id="auth-yes" class="btn btn-primary">Authenticate</button>
       </div>
     </div>
