It sort of mostly works

--- a/public/map.html
+++ b/public/map.html
@@ -45,12 +45,6 @@
       </div>
     </script>
 
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0-rc.3/handlebars.min.js"></script>
-    <script src="//maps.googleapis.com/maps/api/js?sensor=false&libraries=geometry"></script>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/cluster.js"></script>
-    <script src="/app.js"></script>
+    <script data-main="js/main.js" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.5/require.min.js"></script>
   </body>
 </html>
