--- a/public/map.html
+++ b/public/map.html
@@ -39,8 +39,8 @@
     <!-- Handlebars template -->
     <script id="tweet-template" type="text/x-handlebars-template">
       <div class="tweet">
-      <h4 class="handle">@{{handle}}</h4>
-      <h5 class="name">{{name}}</h5>
+      <h4 class="handle">@{{user.screen_name}}</h4>
+      <h5 class="name">{{user.name}}</h5>
       <p class="tweet-body">{{text}}</p>
       </div>
     </script>
