--- a/public/map.html
+++ b/public/map.html
@@ -32,6 +32,10 @@
       </div>
     </div>
     <div id="map"></div>
+    <div id="timedensity">
+      <a class="reset" href="javascript:gainOrLossChart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
+      <span class="reset" style="display: none;">Current filter: <span class="filter"></span></span>
+    </div>
     <div id="sidebar">
       <h2>Clusters</h2>
     </div>
