Working on Process Book

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,10 @@
         </p>
         <p>
           <a class="btn btn-primary btn-large" href="/map.html">
-            Get Started &raquo;
+            Stream Tweets Live &raquo;
+          </a>
+          <a class="btn btn-primary btn-large" href="/events.html">
+            Watch Pre-Recorded Events &raquo;
           </a>
         </p>
       </div>
